syntax = "proto3";
package concord.badge;

option go_package = "github.com/concrnt/concord/x/badge/types";

message Badge {
  string classId = 1;
  string badgeId = 2;
  string name = 3; 
  string description = 4; 
  string uri = 5; 
  string creator = 6; 
  string owner = 7; 
  bool transferable = 8; 
}
